--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com">
+            <img src="/imajes/icons/insta.png" alt="Instagram logo" />
+          </a>
+        </li>
+        <li>
+          <a href="https://wwww.facebook.com">
+            <img src="/imajes/icons/facebook.png" alt="Facebook logo" />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
